--- a/materials/section/macros.tex
+++ b/materials/section/macros.tex
@@ -44,6 +44,7 @@
 \newcommand{\RR}{\mbox{\bbf R}}
 \newcommand{\QQ}{\mbox{\bbf Q}}
 \newcommand{\ZZ}{\mbox{\bbf Z}}
+\renewcommand{\SS}{\mbox{\bbf S}}
 \newcommand{\FF}{\mbox{\bbf F}}
 \newcommand{\GG}{\mbox{\bbf G}}
 \newcommand{\EE}{\mbox{\bbf E}}
